# SNE_v8

./: .dockerignore  .gitignore  Cargo.toml  README.md  todolist.md
.github/workflows/: ci.yml
apps/: README.md
apps/creative-ui/: index.html  package.json  vite.config.ts
apps/gm-ui/: index.html  package.json  vite.config.ts
apps/gm-ui/src/: main.tsx
apps/tech-ui/: Dockerfile  index.html  package.json
crates/sentient-protocol/: Cargo.toml
crates/sentient-protocol/src/: lib.rs
docs/: DECISIONS.md  DEPLOYMENT.md  HOST_BOOTSTRAP.md  Q&A - Sentient Version 8.md  sentient_neural_engine_architecture8.md
docs/core/: GRAPH_JSON.md
docs/firmware/: FIRMWARE_CONTRACT.md  HMAC_REFERENCE.md  TEENSY_V8.md
docs/protocol/: AUTH_HMAC.md  MQTT_TOPICS.md  PAYLOADS.md  QOS_RETAIN.md
docs/runbooks/: AUTH.md  AUTOSTART.md  BACKUP_RESTORE_TEST.md  BROKER_OUTAGE.md  DEVICE_KEY_PROVISIONING.md  DOCKER_ACCESS.md  INCIDENT_FAULT.md  OBSERVABILITY.md  REVERSE_PROXY.md  ROOM_API.md  ROOM_BRINGUP.md  ROOM_SMOKE_TEST.md  SAFETY_RESET.md  TIME_SYNC.md  TLS.md  UDM_PRO_DNS.md  UDM_PRO_VLANS_FIREWALL.md  UIS.md  WARM_STANDBY_PROMOTION.md
hardware/: .gitignore
hardware/Controller Code Teensy/boiler_room_subpanel_v8/: boiler_room_subpanel_v8.ino
hardware/Controller Code Teensy/chemical_v8/: chemical_v8.ino
hardware/Controller Code Teensy/clock_v8/: clock_v8.ino
hardware/Controller Code Teensy/crank_v8/: crank_v8.ino
hardware/Controller Code Teensy/floor_v8/: floor_v8.ino
hardware/Controller Code Teensy/fuse_v8/: fuse_v8.ino
hardware/Controller Code Teensy/gauge_1_3_4_v8/: gauge_1_3_4_v8.ino
hardware/Controller Code Teensy/gauge_2_5_7_v8/: gauge_2_5_7_v8.ino
hardware/Controller Code Teensy/gauge_6_leds_v8/: gauge_6_leds_v8.ino
hardware/Controller Code Teensy/gear_v8/: gear_v8.ino
hardware/Controller Code Teensy/gun_drawers_v8/: gun_drawers_v8.ino
hardware/Controller Code Teensy/keys_v8/: keys_v8.ino
hardware/Controller Code Teensy/kraken_v8/: kraken_v8.ino
hardware/Controller Code Teensy/lab_rm_cage_a_v8/: lab_rm_cage_a_v8.ino
hardware/Controller Code Teensy/lab_rm_cage_b_v8/: lab_rm_cage_b_v8.ino
hardware/Controller Code Teensy/lab_rm_doors_hoist_v8/: lab_rm_doors_hoist_v8.ino
hardware/Controller Code Teensy/lever_boiler_v8/: lever_boiler_v8.ino
hardware/Controller Code Teensy/lever_fan_safe_v8/: lever_fan_safe_v8.ino
hardware/Controller Code Teensy/lever_riddle_v8/: lever_riddle_v8.ino
hardware/Controller Code Teensy/main_lighting_v8/: main_lighting_v8.ino
hardware/Controller Code Teensy/music_v8/: music_v8.ino
infra/: README.md
infra/compose/: README.md
infra/rooms/: README.md
infra/secrets/: README.md
scripts/: README.md  backup-auth-db.sh  backup-room-db.sh  bootstrap-shared-env.sh  check-prereqs.sh  compose.sh  core-control.sh  core-dispatch.sh  generate-teensy-v8-stubs.py  host-bootstrap-ubuntu24.sh  host-ntp-chrony.sh  mosquitto-make-passwd.sh  new-room-standby.sh  new-room.sh  provision-device-keys.py  restore-auth-db.sh  restore-room-db.sh  room-smoke-test.sh  tls-bootstrap-internal-ca.sh
services/: README.md
services/controller-sim/: Cargo.toml  Dockerfile  README.md
services/controller-sim/src/: main.rs
services/osc-bridge/: Cargo.toml  Dockerfile  README.md
services/osc-bridge/src/: main.rs
services/scs-sim/: Cargo.toml  Dockerfile
services/sentient-api/: Cargo.toml  Dockerfile
services/sentient-api/src/: main.rs
services/sentient-auth/: Cargo.toml  Dockerfile
services/sentient-auth/src/: main.rs
services/sentient-core/: Cargo.toml  Dockerfile  README.md
services/sentient-core/src/: main.rs
services/sentient-notify/: Cargo.toml  Dockerfile
services/sentient-notify/src/: main.rs
(+42 files in other folders)
